<resources>
    <string name="app_name">yzty</string>

    <string name="textView_select_trty">请选择变压器类型</string>
    <string name="radioButton_ty">调压</string>
    <string name="radioButton_trty">调容调压</string>
    <string name="editText_hint_ip">请输入IP</string>
    <string name="editText_hint_port">请输入端口</string>
    <string name="editText_hint_pwd">请输入密码</string>
    <string name="button_login_in">登录</string>
    <string name="button_login_out">退出</string>
    <string name="editText_pwd">123456</string>
    <string name="editText_ip">10.10.100.254</string>
    <string name="editText_port">8899</string>

    <string name="textView_gear_label">当前档位：</string>
    <string name="textView_capacity_label">当前容量：</string>

    <string name="textView_gear"> </string>
    <string name="textView_capacity"> </string>


    <string name="item_monitor">实时状态</string>
    <string name="item_telemeter">遥测数据</string>
    <string name="item_control">开关控制</string>
    <string name="item_config">参数配置</string>

    <string name="textView_memery_gear_label">记忆档位:</string>
    <string name="textView_memery_gear"> </string>
    <string name="textView_mode_label">工作模式:</string>
    <string name="textView_mode"> </string>
    <string name="textView_ty_num_label">开关动作次数:</string>
    <string name="textView_ty_num"> </string>
    <string name="textView_alarm_num_label">设备告警次数:</string>
    <string name="textView_alarm_num"> </string>
    <string name="textView_reboot_num_label">设备重启次数:</string>
    <string name="textView_reboot_num"> </string>
    <string name="textView_device_stat_label">设备状态:</string>
    <string name="textView_device_stat"> </string>

    <string name="textView_phase_va_label">A相电压:</string>
    <string name="textView_phase_va"> </string>
    <string name="textView_phase_vb_label">B相电压:</string>
    <string name="textView_phase_vb"> </string>
    <string name="textView_phase_vc_label">C相电压:</string>
    <string name="textView_phase_vc"> </string>
    <string name="textView_phase_ia_label">A相电流:</string>
    <string name="textView_phase_ia"> </string>
    <string name="textView_phase_ib_label">B相电流:</string>
    <string name="textView_phase_ib"> </string>
    <string name="textView_phase_ic_label">C相电流:</string>
    <string name="textView_phase_ic"> </string>
    <string name="textView_phase_pa_label">A相有功:</string>
    <string name="textView_phase_pa"> </string>
    <string name="textView_phase_pb_label">B相有功:</string>
    <string name="textView_phase_pb"> </string>
    <string name="textView_phase_pc_label">C相有功:</string>
    <string name="textView_phase_pc"> </string>
    <string name="textView_phase_qa_label">A相无功:</string>
    <string name="textView_phase_qa"> </string>
    <string name="textView_phase_qb_label">B相无功:</string>
    <string name="textView_phase_qb"> </string>
    <string name="textView_phase_qc_label">C相无功:</string>
    <string name="textView_phase_qc"> </string>
    <string name="textView_pf_label">功率因数:</string>
    <string name="textView_pf"> </string>
    <string name="textView_freq_label">频率:</string>
    <string name="textView_freq"> </string>
    <string name="textView_device_temp_label">控制器温度:</string>
    <string name="textView_device_temp"> </string>
    <string name="textView_oil_temp_label">油温:</string>
    <string name="textView_oil_temp"> </string>

    <string name="textView_unit_v">V</string>
    <string name="textView_unit_s">S</string>
    <string name="textView_unit_i">A</string>
    <string name="textView_unit_p">W</string>
    <string name="textView_unit_h">Hz</string>
    <string name="textView_unit_t">℃</string>
    <string name="textView_unit_kva">kVA</string>
     <string name="textView_gap"> </string>


    <string name="textView_device_time_label">时间:</string>
    <string name="editText_time"> </string>
    <string name="editText_hint_time"> </string>
    <string name="button_get">获取</string>
    <string name="button_set">配置</string>
    <string name="textView_config_label">设备参数</string>

    <string name="textView_up_th_label">升压阈值：</string>
    <string name="editText_up_th"> </string>
    <string name="editText_hint_up_th">225~240</string>
    <string name="textView_down_th_label">降压阈值：</string>
    <string name="editText_down_th"> </string>
    <string name="editText_hint_down_th">198~225</string>
    <string name="textView_motion_space_label">动作间隔：</string>
    <string name="editText_motion_space"> </string>
    <string name="editText_hint_motion_space">10~3600</string>
    <string name="textView_ty_delay_label">调压延时：</string>
    <string name="editText_ty_delay"> </string>
    <string name="editText_hint_ty_delay">5~1200</string>
    <string name="textView_ct_ratio_label">CT变比：</string>
    <string name="editText_ct_ratio"> </string>
    <string name="editText_hint_ct_ratio">300,600,1000</string>
    <string name="textView_over_current_label">过流保护：</string>
    <string name="editText_over_current"> </string>
    <string name="editText_hint_over_current">1.5倍额定</string>
    <string name="textView_lock_up_th_label">闭锁调压上限：</string>
    <string name="editText_lock_up_th"> </string>
    <string name="editText_hint_lock_up_th">默认240</string>
    <string name="textView_lock_down_th_label">闭锁调压下限：</string>
    <string name="editText_lock_down_th"> </string>
    <string name="editText_hint_lock_down_th">默认198</string>
    <string name="textView_lock_high_label">高压保护：</string>
    <string name="editText_lock_high"> </string>
    <string name="editText_hint_lock_high">250~300</string>
    <string name="textView_lock_low_label">低压保护：</string>
    <string name="editText_lock_low"> </string>
    <string name="editText_hint_lock_low">150~200</string>
    <string name="textView_tr_th_label">调容阈值：</string>
    <string name="editText_tr_th"> </string>
    <string name="editText_hint_tr_th">小于变压器容量1/3</string>
    <string name="textView_tr_delay_label">调容延时：</string>
    <string name="editText_tr_delay"> </string>
    <string name="editText_hint_tr_delay">大于600</string>
    <string name="textView_alarm_temp_th_label">温度告警阈值：</string>
    <string name="editText_alarm_temp_th"> </string>
    <string name="editText_hint_alarm_temp_th">默认85</string>
    <string name="textView_tran_cap_label">变压器容量：</string>
    <string name="editText_tran_cap"> </string>
    <string name="editText_hint_tran_cap">实际容量，例如400</string>
    <string name="textView_device_code_label">设备编码：</string>
    <string name="editText_device_code"> </string>
    <string name="editText_hint_device_code">小于65535</string>

    <string name="textView_tap_num_label">总档数:</string>
    <string name="textView_tap_num"> </string>
    <string name="textView_tap_h_label">调压幅度上限:</string>
    <string name="textView_tap_h"> </string>
    <string name="textView_tap_l_label">调压幅度下限:</string>
    <string name="textView_tap_l"> </string>
    <string name="textView_hard_v_label">硬件版本:</string>
    <string name="textView_hard_v"> </string>
    <string name="textView_soft_v_label">软件版本:</string>
    <string name="textView_soft_v"> </string>
    <string name="textView_switch_type_label">开关类型:</string>
    <string name="textView_switch_type"> </string>


    <string name="textView_switch_mode_label">模式切换</string>
    <string name="textView_switch_control_label">开关控制</string>

    <string name="radioButton_mode_auto">自动模式</string>
    <string name="radioButton_mode_tele">遥控模式</string>
    <string name="button_switch_mode">切换</string>

    <string name="radioButton_ty_up">升压</string>
    <string name="radioButton_ty_down">降压</string>
    <string name="radioButton_tr">调容</string>

    <string name="button_select">选择</string>


</resources>
